--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "minecraft-data": "^2.54.0",
     "prismarine-block": "^1.5.0",
     "prismarine-chunk": "^1.17.0",
+    "prismarine-world": "^2.2.0",
     "socket.io": "^2.3.0",
-    "three": "^0.117.1"
+    "three": "^0.117.1",
+    "vec3": "^0.1.5"
   },
   "devDependencies": {
     "standard": "^14.3.4",
