--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,3 +32,7 @@ jobs:
         CIRCLE_NODE_INDEX: ${{ matrix.mcVersionIndex }}
         CIRCLE_NODE_TOTAL: 9
       run: npm test
+    - uses: actions/upload-artifact@v2
+      with:
+        name: test_picture
+        path: test/test_*.png
