--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest --verbose --runInBand --forceExit",
     "pretest": "npm run lint && require-self",
     "lint": "standard",
-    "prepare": "npm install require-self && require-self",
+    "prepare": "npm install require-self && require-self && webpack",
     "fix": "standard --fix"
   },
   "author": "PrismarineJS",
@@ -17,7 +17,7 @@
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "express-browserify": "^1.0.3",
-    "minecraft-assets": "^1.3.1",
+    "minecraft-assets": "^1.4.0",
     "minecraft-data": "^2.67.0",
     "node-canvas-webgl": "^0.2.6",
     "prismarine-block": "^1.7.1",
@@ -26,14 +26,16 @@
     "protodef": "^1.8.2",
     "socket.io": "^2.3.0",
     "three": "^0.117.1",
-    "vec3": "^0.1.7"
+    "vec3": "^0.1.7",
+    "webpack": "^5.10.0",
+    "webpack-cli": "^4.2.0"
   },
   "devDependencies": {
     "jest": "^26.1.0",
     "jest-puppeteer": "^4.4.0",
     "minecraft-wrap": "^1.2.3",
     "mineflayer": "^2.28.1",
-    "mineflayer-pathfinder": "^1.0.11",
+    "mineflayer-pathfinder": "^1.2.2",
     "puppeteer": "^5.1.0",
     "require-self": "^0.2.3",
     "standard": "^16.0.1"
