--- a/package.json
+++ b/package.json
@@ -18,26 +18,29 @@
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "minecraft-assets": "^1.4.0",
-    "minecraft-data": "^2.67.0",
+    "minecraft-data": "^2.70.2",
     "node-canvas-webgl": "^0.2.6",
-    "prismarine-block": "^1.7.1",
+    "prismarine-block": "^1.7.2",
     "prismarine-chunk": "^1.20.3",
-    "prismarine-world": "^3.1.0",
-    "protodef": "^1.8.2",
-    "socket.io": "^2.3.0",
-    "three": "^0.117.1",
+    "prismarine-world": "^3.1.1",
+    "process": "^0.11.10",
+    "protodef": "^1.8.3",
+    "socket.io": "^3.0.4",
+    "socket.io-client": "^3.0.4",
+    "three": "^0.123.0",
+    "three.meshline": "^1.3.0",
     "vec3": "^0.1.7",
-    "webpack": "^5.10.0",
+    "webpack": "^5.10.2",
     "webpack-cli": "^4.2.0"
   },
   "devDependencies": {
-    "jest": "^26.1.0",
+    "jest": "^26.6.3",
     "jest-puppeteer": "^4.4.0",
-    "minecraft-wrap": "^1.2.3",
-    "mineflayer": "^2.28.1",
+    "minecraft-wrap": "^1.3.0",
+    "mineflayer": "^2.37.1",
     "mineflayer-pathfinder": "^1.2.2",
-    "puppeteer": "^5.1.0",
+    "puppeteer": "^5.5.0",
     "require-self": "^0.2.3",
-    "standard": "^16.0.1"
+    "standard": "^16.0.3"
   }
 }
