Add buffer polyfill

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "assert": "^2.0.0",
+    "buffer": "^6.0.3",
     "canvas": "^2.6.1",
     "compression": "^1.7.4",
     "express": "^4.17.1",
