--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@ package-lock.json
 versions/
 public/index.js
 public/worker.js
+public/supportedVersions.json
 public/textures/
 public/blocksStates/
