--- a/examples/electron/package.json
+++ b/examples/electron/package.json
@@ -7,6 +7,7 @@
         "start": "electron ."
     },
     "dependencies": {
+        "prismarine-viewer": "file:../../",
         "prismarine-provider-anvil": "^2.3.1",
         "electron": "^11.0.2"
     }
