--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ public/worker.js
 public/supportedVersions.json
 public/textures/
 public/blocksStates/
+examples/standalone/public/index.js
+examples/standalone/public/worker.js
+examples/standalone/public/supportedVersions.json
+examples/standalone/public/textures/
+examples/standalone/public/blocksStates/
