--- a/examples/standalone/package.json
+++ b/examples/standalone/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "prepare": "webpack",
-        "start": "webpack serve"
+        "start": "webpack serve",
+        "prod-start": "http-server public/"
     },
     "dependencies": {
         "copy-webpack-plugin": "^7.0.0",
@@ -13,5 +14,8 @@
         "webpack": "^5.11.0",
         "webpack-cli": "^4.2.0",
         "webpack-dev-server": "^3.11.0"
+    },
+    "devDependencies": {
+        "http-server": "^0.12.3"
     }
 }
