--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,7 @@ jobs:
       uses: actions/setup-node@master
       with:
         node-version: 10.0.0
+    - run: npm install
     - name: Publish if version has been updated
       uses: pascalgn/npm-publish-action@1.3.5
       with: # All of theses inputs are optional
