--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@master
       with:
-        node-version: 10.0.0
+        node-version: 14.x
     - run: npm install
     - name: Publish if version has been updated
       uses: pascalgn/npm-publish-action@1.3.5
