Use schematic in standalone example

--- a/examples/standalone/package.json
+++ b/examples/standalone/package.json
@@ -9,8 +9,15 @@
         "prod-start": "http-server public/"
     },
     "dependencies": {
+        "assert": "^2.0.0",
+        "browserify-zlib": "^0.2.0",
+        "buffer": "^6.0.3",
         "copy-webpack-plugin": "^7.0.0",
+        "events": "^3.2.0",
+        "prismarine-schematic": "^1.0.0",
         "prismarine-viewer": "file:../../",
+        "process": "^0.11.10",
+        "stream-browserify": "^3.0.0",
         "webpack": "^5.11.0",
         "webpack-cli": "^4.2.0",
         "webpack-dev-server": "^3.11.0"
