--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@ node_modules
 package-lock.json
 /test/*.png
 versions/
-public/index.js
-public/worker.js
+public/index.js*
+public/worker.js*
 public/supportedVersions.json
 public/textures/
 public/blocksStates/
