--- a/examples/web_client/package.json
+++ b/examples/web_client/package.json
@@ -1,7 +1,8 @@
 {
-    "name": "prismarine-viewer-standalone",
+    "name": "web_client",
+    "private": true,
     "version": "1.0.0",
-    "description": "prismarine-viewer-standalone",
+    "description": "web_client",
     "main": "index.js",
     "scripts": {
         "prepare": "webpack",
@@ -25,7 +26,7 @@
         "net-browserify": "^0.2.4",
         "os-browserify": "^0.3.0",
         "path-browserify": "^1.0.1",
-        "prismarine-viewer": "^1.13.0",
+        "prismarine-viewer": "file:../..",
         "process": "^0.11.10",
         "stream-browserify": "^3.0.0",
         "three": "^0.124.0",
