--- a/examples/exporter/package.json
+++ b/examples/exporter/package.json
@@ -9,9 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "blob-polyfill": "^4.0.20200601",
-    "filereader": "^0.10.3",
     "prismarine-schematic": "^1.1.2",
-    "three-stlexporter": "rom1504/three-STLexporter"
+    "three-stlexporter": "rom1504/three-STLexporter",
+    "vblob": "^1.0.2",
+    "three-gltf-exporter": "rom1504/three-gltf-exporter"
   }
 }
