--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "socket.io-client": "^3.1.0",
     "three": "^0.125.2",
     "three.meshline": "^1.3.0",
+    "@tweenjs/tween.js": "^18.6.4",
     "vec3": "^0.1.7"
   },
   "devDependencies": {
