--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "puppeteer": "^8.0.0",
     "standard": "^16.0.3",
     "webpack": "^5.10.2",
-    "webpack-cli": "^4.2.0"
+    "webpack-cli": "^4.2.0",
+    "fs-extra": "^9.1.0"
   }
 }
