--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     ]
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^18.6.4",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "minecraft-data": "^2.74.0",
@@ -31,7 +32,6 @@
     "socket.io-client": "^3.1.0",
     "three": "^0.126.0",
     "three.meshline": "^1.3.0",
-    "@tweenjs/tween.js": "^18.6.4",
     "vec3": "^0.1.7"
   },
   "devDependencies": {
@@ -47,6 +47,7 @@
     "mineflayer": "^3.2.0",
     "mineflayer-pathfinder": "^1.6.1",
     "prismarine-schematic": "^1.2.0",
+    "minecrafthawkeye": "^1.2.5",
     "prismarine-viewer": "file:./",
     "puppeteer": "^8.0.0",
     "standard": "^16.0.3",
