--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,16 +43,21 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1 # If you're using actions/checkout@v2 you must set persist-credentials to false in most cases for the deployment to work correctly.
         with:
+          ref: 'gh-pages'
           persist-credentials: false
       - name: Download build
         uses: actions/download-artifact@v2
         with:
           name: test_picture
-          path: test_picture
+      - name: Create commits
+        run: |
+          git config user.name 'rom1504bot'
+          git config user.email 'rom1504bot@users.noreply.github.com'
+          git add --all
+          git commit --amend -m "Update gh-pages"
       - name: Deploy 🚀
-        uses: JamesIves/github-pages-deploy-action@3.7.1
+        uses: ad-m/github-push-action@master
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: test_picture
-          CLEAN: false
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: gh-pages
+          force: true
