--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Web based viewer",
   "main": "index.js",
   "scripts": {
-    "test": "jest --verbose --runInBand --forceExit",
+    "test": "mocha --reporter spec --exit",
     "pretest": "npm run lint",
     "lint": "standard",
     "prepare": "node viewer/prerender.js && webpack",
@@ -38,21 +38,22 @@
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
     "canvas": "^2.6.1",
-    "process": "^0.11.10",
-    "node-canvas-webgl": "^0.2.6",
-    "minecraft-assets": "^1.8.2",
-    "jest": "^27.0.4",
+    "expect": "^27.3.1",
+    "fs-extra": "^9.1.0",
     "jest-puppeteer": "^6.0.0",
+    "minecraft-assets": "^1.8.2",
     "minecraft-wrap": "^1.3.0",
+    "minecrafthawkeye": "^1.2.5",
     "mineflayer": "^3.2.0",
     "mineflayer-pathfinder": "^1.6.1",
+    "mocha": "^9.1.3",
+    "node-canvas-webgl": "^0.2.6",
     "prismarine-schematic": "^1.2.0",
-    "minecrafthawkeye": "^1.2.5",
     "prismarine-viewer": "file:./",
+    "process": "^0.11.10",
     "puppeteer": "^11.0.0",
     "standard": "^16.0.3",
     "webpack": "^5.10.2",
-    "webpack-cli": "^4.2.0",
-    "fs-extra": "^9.1.0"
+    "webpack-cli": "^4.2.0"
   }
 }
