--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,8 @@ jobs:
       with:
         java-version: ${{ matrix.javaVersion }}
         java-package: jre
+    - name: Install xi
+      run: sudo apt-get install -y libxi-dev
     - run: npm install
     - env:
         CIRCLE_NODE_INDEX: ${{ matrix.mcVersionIndex }}
