--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
         java-version: ${{ matrix.javaVersion }}
         java-package: jre
     - name: Install xi
-      run: sudo apt-get install -y libxi-dev
+      run: sudo apt-get install -y libxi-dev libglu1-mesa-dev
     - run: npm install
     - env:
         CIRCLE_NODE_INDEX: ${{ matrix.mcVersionIndex }}
