--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,8 @@ jobs:
         include:
          - javaVersion: 16
            mcVersionIndex: 10
+         - javaVersion: 17
+           mcVersionIndex: 11
 
     steps:
     - uses: actions/checkout@v2
@@ -30,10 +32,12 @@ jobs:
       with:
         java-version: ${{ matrix.javaVersion }}
         java-package: jre
+    - name: Install xi
+      run: sudo apt-get install -y libxi-dev libglu1-mesa-dev
     - run: npm install
     - env:
         CIRCLE_NODE_INDEX: ${{ matrix.mcVersionIndex }}
-        CIRCLE_NODE_TOTAL: 11
+        CIRCLE_NODE_TOTAL: 12
       run: npm test
     - uses: actions/upload-artifact@v2
       with:
