added skin support for players

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "socket.io-client": "^4.0.0",
     "three": "0.128.0",
     "three.meshline": "^1.3.0",
-    "vec3": "^0.1.7"
+    "vec3": "^0.1.7",
+    "node-fetch": "v2"
   },
   "devDependencies": {
     "assert": "^2.0.0",
