--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "buffer": "^6.0.3",
     "canvas": "^2.6.1",
     "process": "^0.11.10",
-    "node-canvas-webgl": "^0.2.6",
+    "node-canvas-webgl": "PrismarineJS/node-canvas-webgl",
     "minecraft-assets": "^1.9.0",
     "jest": "^27.0.4",
     "jest-puppeteer": "^6.0.0",
