--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,7 @@ jobs:
     - name: Install xi
       run: sudo apt-get install -y libxi-dev libglu1-mesa-dev
     - run: npm install
+    - run: npm run build
     - env:
         CIRCLE_NODE_INDEX: ${{ matrix.mcVersionIndex }}
         CIRCLE_NODE_TOTAL: 12
