--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,6 +13,7 @@ jobs:
         with:
           node-version: 14
       - run: npm install
+      - run: npm run build
       - id: publish
         uses: JS-DevTools/npm-publish@v1
         with:
