--- a/package.json
+++ b/package.json
@@ -38,21 +38,21 @@
     "assert": "^2.0.0",
     "buffer": "^6.0.3",
     "canvas": "^2.6.1",
-    "process": "^0.11.10",
-    "node-canvas-webgl": "PrismarineJS/node-canvas-webgl",
-    "minecraft-assets": "^1.9.0",
+    "fs-extra": "^11.0.0",
     "jest": "^27.0.4",
     "jest-puppeteer": "^6.0.0",
+    "minecraft-assets": "^1.9.0",
     "minecraft-wrap": "^1.3.0",
+    "minecrafthawkeye": "^1.2.5",
     "mineflayer": "^4.0.0",
     "mineflayer-pathfinder": "^2.0.0",
+    "node-canvas-webgl": "PrismarineJS/node-canvas-webgl",
     "prismarine-schematic": "^1.2.0",
-    "minecrafthawkeye": "^1.2.5",
     "prismarine-viewer": "file:./",
+    "process": "^0.11.10",
     "puppeteer": "^16.0.0",
-    "standard": "^17.0.0",
+    "standard": "^17.1.0",
     "webpack": "^5.10.2",
-    "webpack-cli": "^5.1.1",
-    "fs-extra": "^11.0.0"
+    "webpack-cli": "^5.1.1"
   }
 }
