--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,22 +22,16 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x]
         javaVersion: [17]
-        mcVersion: ['1.8.8', '1.9.4', '1.10.2', '1.11.2', '1.12.2', '1.13.2', '1.14.4', '1.15.2', '1.16.1', '1.16.4']
-        include:
-         - javaVersion: 16
-           mcVersionIndex: '1.17.1'
-         - javaVersion: 17
-           mcVersionIndex: '1.18.1'
+        mcVersion: ['1.8.8', '1.9.4', '1.10.2', '1.11.2', '1.12.2', '1.13.2', '1.14.4', '1.15.2', '1.16.1', '1.16.4', '1.17.1', '1.18.1']
       fail-fast: false
 
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js 18.x
       uses: actions/setup-node@v1
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 18.x
     - name: Setup Java JDK
       uses: actions/setup-java@v1
       with:
