Check file size of screenshot.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ examples/standalone/public/worker.js
 examples/standalone/public/textures/
 examples/standalone/public/blocksStates/
 *.DS_Store
+test/server_*
