--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
     - run: npm run jestTest -- -t ${{ matrix.mcVersion }}
     - uses: actions/upload-artifact@v4
       with:
-        name: test_picture
+        name: test_picture-${{ github.run_id }}-${{ github.job }}
         path: test/test_*.png
   DeployPages:
     runs-on: ubuntu-latest
@@ -57,7 +57,7 @@ jobs:
       - name: Download build
         uses: actions/download-artifact@v4.1.7
         with:
-          name: test_picture
+          name: test_picture-${{ github.run_id }}-${{ github.job }}
       - name: Create commits
         run: |
           git config user.name 'rom1504bot'
