--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
     - run: npm run jestTest -- -t ${{ matrix.mcVersion }}
     - uses: actions/upload-artifact@v4
       with:
-        name: test_picture
+        name: test_picture-${{ matrix.mcVersion }}
         path: test/test_*.png
   DeployPages:
     runs-on: ubuntu-latest
