Fix download artifacts
https://github.com/actions/download-artifact?tab=readme-ov-file#download-multiple-filtered-artifacts-to-the-same-directory

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,9 @@ jobs:
       - name: Download build
         uses: actions/download-artifact@v4.1.7
         with:
-          name: test_picture
+          path: .
+          pattern: test_picture-*
+          merge-multiple: true
       - name: Create commits
         run: |
           git config user.name 'rom1504bot'
