Update to node 22 (#453)
* node 22

* Update ci.yml

* Update ci.yml

* Update ci.yml

* Update package.json

* Update ci.yml

* Update package.json

* Update viewer.test.js

* Update package.json

* Update jest.config.js

* Update jest.config.js

* Update jest-puppeteer.config.js

* Update package.json

* Update viewer.test.js

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js 18.x
+    - name: Use Node.js 22.x
       uses: actions/setup-node@v1.4.4
       with:
-        node-version: 18.x
+        node-version: 22.x
     - run: npm i && npm run lint
   build:
 
@@ -27,17 +27,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js 18.x
+    - name: Use Node.js 22.x
       uses: actions/setup-node@v1
       with:
-        node-version: 18.x
+        node-version: 22.x
     - name: Setup Java JDK
       uses: actions/setup-java@v1
       with:
         java-version: 21
         java-package: jre
     - name: Install xi
-      run: sudo apt-get install -y libxi-dev libglu1-mesa-dev
+      run: sudo apt-get install -y libxi-dev libcairo2-dev libjpeg-dev libpango1.0-dev libgif-dev build-essential libglu1-mesa-dev libglew-dev
     - run: npm install
     - run: npm run jestTest -- -t ${{ matrix.mcVersion }}
     - uses: actions/upload-artifact@v4
